Added a version checker